feature. restarted from scratch using es6.

--- a/kata/game-of-life/package.json
+++ b/kata/game-of-life/package.json
@@ -1,29 +1,38 @@
 {
-  "name": "game-of-life",
+  "name": "node-es6-tdd",
   "version": "0.0.1",
-  "description": "The Game Of Life",
+  "description": "node es6 tdd",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "gulp test",
+    "test-auto": "gulp test-auto"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lovejedi/cleancodejedi-academy.git"
+    "url": "git+https://github.com/raydecastro/node-es6-tdd.git"
   },
   "keywords": [
-    "game",
-    "of",
-    "life",
+    "node",
+    "es6",
     "tdd"
   ],
-  "author": "Ray de Castro, Greg Nagy",
-  "license": "ISC",
+  "author": "ray de castro",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lovejedi/cleancodejedi-academy/issues"
+    "url": "https://github.com/raydecastro/node-es6-tdd/issues"
   },
-  "homepage": "https://github.com/lovejedi/cleancodejedi-academy#readme",
+  "homepage": "https://github.com/raydecastro/node-es6-tdd#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.16.0",
+    "babel-register": "^6.16.3",
     "chai": "^3.5.0",
-    "mocha": "^2.5.3"
+    "gulp": "^3.9.1",
+    "gulp-mocha": "^3.0.1",
+    "mocha": "^3.1.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
